--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <br />
           <br />
           <h3>Remember us?</h3>
-          <p>By:<br/>Jesse Wagner, John Donahue, Josh Proehl, Loc Le, Nasim Sanati, Peter Gicking, Rob Werfelmann</p>
+          <p>By:<br/>Jesse Wagner, John Donahue, Josh Proehl, Loc Le, Nasim Sanati, Peter GICKING, Rob Werfelmann</p>
           <aside class="notes">
           </aside>
         </section>
