Changing the title of the slide
What it says on the tin.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </section>
 
         <section>
-          <h2>Interesting technical challenges: Frontend</h2>
+          <h2>Basic Overview of Routelandia</h2>
           <p>
 
           </p>
