Changing the title of the slide
What it says on the tin.

--- a/index.html
+++ b/index.html
@@ -61,41 +61,17 @@
         </section>
 
         <section>
-          <h2>Background of ITS and Portal</h2>
+          <h2>A quick reminder...</h2>
           <p>
-            <h3 align="left">ITS</h3>
-            <ul>
-              <li>Intelligent Transportation Systems</li>
-              <li>Collects and analyzes transportation information</li>
-            </ul>
-            <h3 align="left">PORTAL</h3>
-            <ul>
-              <li>Portland, Oregon Regional Transportation Archive Listing</li>
-              <li>Archives various traffic information in the Portland metro area</li>
-            </ul>
+            What is this routelandia thing again?
           </p>
 
           <aside class="notes">
-            ITS is an organization that has a place here at PSU. It stands for "Intelligent Transportation Systems". ITS' role here
-            is to collect and analyze various information about traffic.
-            PORTAL is a sub-group within ITS that has a more specific role. It stands for Portland, Oregon Regional Transportation
-            Archive Listing. Their goal is to collect and archive various traffic data and statistics in the Portland Metro area.
           </aside>
         </section>
 
         <section>
-          <h2>The Pitch</h2>
-          <p>
-            Infomercial to go here
-          </p>
-
-          <aside class="notes">
-              Since the "basic overview of routelandia" comes right after this slide, I think we should consider merging -PG
-          </aside>
-        </section>
-
-        <section>
-          <h2>Routelandia Overview</h2>
+          <h2>Demo time!</h2>
           <p>
 
           </p>
@@ -105,28 +81,7 @@
         </section>
 
         <section>
-          <h2>Front end specifics</h2>
-          <p>
-            details details details
-          </p>
-
-          <aside class="notes">
-          </aside>
-        </section>
-
-
-        <section>
-          <h2>Backend specifics</h2>
-          <p>
-              details details details
-          </p>
-
-          <aside class="notes">
-          </aside>
-        </section>
-
-        <section>
-          <h2>Limitations of the App</h2>
+          <h2>Basic Overview of Routelandia</h2>
           <p>
 
           </p>
@@ -136,53 +91,38 @@
         </section>
 
         <section>
-            <h2>Development</h2>
-            <p>
-                ODOT probably wont care much about this -PG
-            </p>
+          <h2>Interesting technical challenges: Backend</h2>
+          <p>
 
-            <aside class="notes">
-            </aside>
+          </p>
+
+          <aside class="notes">
+          </aside>
+        </section>
+
+
+        <section>
+          <h2>Things we couldn't do...</h2>
+          <p>
+
+          </p>
+
+          <aside class="notes">
+          </aside>
         </section>
 
         <section>
-            <h2>What we learned</h2>
-            <p>
-                I will bet this wil probably want to be two slides -PG
-            </p>
+          <h2>Any Questions?</h2>
+          <p>
 
-            <aside class="notes">
-            </aside>
-        </section>
+          </p>
 
-        <section>
-            <h2>What we would've done differently</h2>
-            <p>
-            </p>
-
-            <aside class="notes">
-            </aside>
-        </section>
-
-        <section>
-            <h2>If we had more time</h2>
-            <p>
-            </p>
-
-            <aside class="notes">
-            </aside>
-        </section>
-
-        <section>
-            <h2>Conclusion</h2>
-            <p>
-                how are we gonna wrap this up gang?
-            </p>
-
-            <aside class="notes">
-            </aside>
+          <aside class="notes">
+          </aside>
         </section>
       </div>
+
+    </div>
 
     <script src="lib/js/head.min.js"></script>
     <script src="js/reveal.min.js"></script>
