initial draft of page 2 of the final presentation

--- a/index.html
+++ b/index.html
@@ -71,9 +71,16 @@
         </section>
 
         <section>
-          <h2>Demo time!</h2>
+          <h2>There is a problem:</h2>
+          <h2>We have data.</h2>
+          <h2>We have a solution.</h2>
           <p>
-
+          	  <ul>
+          	  	   <li>Have you ever been frustrated that you left work and spent 2 hours waiting in traffic?</li>
+          	  	   <li>Perhaps you would have rather stayed at work and got more done and later took a shorter trip?</li>
+          	  	   <li>PORTAL provides large amounts of data about the freeways within the Portland Metro Area!</li>
+          	  	   <li>With routlandia, all of your problems will be solved!</li>
+			  </ul>
           </p>
 
           <aside class="notes">
