contents and notes
Completed preliminary slide content and speaker notes for slide 3.

--- a/index.html
+++ b/index.html
@@ -83,10 +83,34 @@
         <section>
           <h2>Basic Overview of Routelandia</h2>
           <p>
-
+		  <ul>
+			Android App
+			Presents travel times on highways
+			<li>
+			  near Portland
+			  displaced from origin
+			  historical data
+			</li>
+			Traffic is vaguely cyclical
+			Lets you know best time to hit highway
+		  </ul>
           </p>
 
           <aside class="notes">
+		    Routelandia is an app that runs natively on android phones
+			which shows travel times on highways. As our data is local
+			to the general Portland area, those are the highways
+			Routelandia will be able to display.
+			
+			The most exciting part is this app won't just give you travel
+			times for the moment you choose, but also for before and after.
+			It does this by looking at information from the near past at
+			that time to project how it will be.
+			
+			Traffic tends to follow cycles, as anyone who deals with
+			rush-hour each morning can tell you. Routelandia lets you
+			see, in a convenient way, what those cycles look like,
+			letting you know when is the best time to hit the road.
           </aside>
         </section>
 
