overhauled the format to match our outline.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <br />
           <br />
           <h3>Remember us?</h3>
-          <p>By:<br/>Jesse Wagner, John Donahue, Josh Proehl, Loc LE, Nasim Sanati, Peter Gicking, Rob Werfelmann</p>
+          <p>By:<br/>Jesse Wagner, John Donahue, Josh Proehl, Loc Le, Nasim Sanati, Peter Gicking, Rob Werfelmann</p>
           <aside class="notes">
           </aside>
         </section>
@@ -67,11 +67,25 @@
           </p>
 
           <aside class="notes">
+              Will want this to be ITS and PORTAL background for capstone presentation
+
+              Capstone background for ODOT presentation
           </aside>
         </section>
 
         <section>
-          <h2>Demo time!</h2>
+          <h2>The Pitch</h2>
+          <p>
+            Infomercial to go here
+          </p>
+
+          <aside class="notes">
+              Since the "basic overview of routelandia" comes right after this slide, I think we should consider merging -PG
+          </aside>
+        </section>
+
+        <section>
+          <h2>Routelandia Overview</h2>
           <p>
 
           </p>
@@ -81,7 +95,28 @@
         </section>
 
         <section>
-          <h2>Interesting technical challenges: Frontend</h2>
+          <h2>Front end specifics</h2>
+          <p>
+            details details details
+          </p>
+
+          <aside class="notes">
+          </aside>
+        </section>
+
+
+        <section>
+          <h2>Backend specifics</h2>
+          <p>
+              details details details
+          </p>
+
+          <aside class="notes">
+          </aside>
+        </section>
+
+        <section>
+          <h2>Limitations of the App</h2>
           <p>
 
           </p>
@@ -91,38 +126,53 @@
         </section>
 
         <section>
-          <h2>Interesting technical challenges: Backend</h2>
-          <p>
+            <h2>Development</h2>
+            <p>
+                ODOT probably wont care much about this -PG
+            </p>
 
-          </p>
-
-          <aside class="notes">
-          </aside>
-        </section>
-
-
-        <section>
-          <h2>Things we couldn't do...</h2>
-          <p>
-
-          </p>
-
-          <aside class="notes">
-          </aside>
+            <aside class="notes">
+            </aside>
         </section>
 
         <section>
-          <h2>Any Questions?</h2>
-          <p>
+            <h2>What we learned</h2>
+            <p>
+                I will bet this wil probably want to be two slides -PG
+            </p>
 
-          </p>
+            <aside class="notes">
+            </aside>
+        </section>
 
-          <aside class="notes">
-          </aside>
+        <section>
+            <h2>What we would've done differently</h2>
+            <p>
+            </p>
+
+            <aside class="notes">
+            </aside>
+        </section>
+
+        <section>
+            <h2>If we had more time</h2>
+            <p>
+            </p>
+
+            <aside class="notes">
+            </aside>
+        </section>
+
+        <section>
+            <h2>Conclusion</h2>
+            <p>
+                how are we gonna wrap this up gang?
+            </p>
+
+            <aside class="notes">
+            </aside>
         </section>
       </div>
-
-    </div>
 
     <script src="lib/js/head.min.js"></script>
     <script src="js/reveal.min.js"></script>
