Added stuff to the slides specific to the backend's experience

--- a/index.html
+++ b/index.html
@@ -133,9 +133,16 @@
 
 
         <section>
-          <h2>Things we couldn't do...</h2>
+          <h2>A REST Service</h2>
           <p>
-
+            <ul>
+                <li>RESTler framework to abstract away the nitty gritty of REST</li>
+                <li>Communicates with frontend via JSON</li>
+                <li>Does the majority of the number crunching</li>
+                <li>Communicates with PORTALs database to generate statistics</li>
+                <li>BDD testing with Behat</li>
+                <li>All written in PHP using Model View Controller</li>
+            </ul>
           </p>
 
           <aside class="notes">
@@ -145,11 +152,87 @@
         <section>
           <h2>Any Questions?</h2>
           <p>
+              <ul>
+            <li>limited only to highway data</li>
+            <ul><li>This was a deliberate choice</li>
+            <li>Highway data was the oldest and most stable of the data</li>
+            <li>We rely on hisortical data so it made since to choose the data with the largest archive</li></ul>
+            <li>Currently cannot generate statistics across multiple highways</li>
+            <ul><li>We have a potential way for a future team to implement this</li></ul>
+        </ul>
 
           </p>
 
           <aside class="notes">
           </aside>
+        </section>
+
+        <section>
+            <h2>Development</h2>
+            <p>
+                ODOT probably wont care much about this -PG
+                <ul>
+                    <li>"Full time student" agile</li>
+                    <li>No daily stand ups</li>
+                    <li>Weekly "sprints" and goal setting</li>
+                </ul>
+            </p>
+
+            <aside class="notes">
+            </aside>
+        </section>
+
+        <section>
+            <h2>What we learned</h2>
+            <p>
+                I will bet this wil probably want to be two slides -PG
+                <ul>
+                    <li>The good and bad of working with a team to produce something</li>
+                        <ul><li>Im assuming this was a first for most of us, should expand on it</li></ul>
+                <li><b>Leaving slide unfinished so front end can also add</b> </li>
+                </ul>
+            </p>
+
+            <aside class="notes">
+            </aside>
+        </section>
+
+        <section>
+            <h2>What we would've done differently</h2>
+            <p>
+                <ul>
+                    <li>Backend would not have gone with PHP</li>
+                    <ul>
+                        <li>Its quirkiness often slowed progress</li>
+                        <li>The frameworks we used had little support</li>
+                    </ul>
+                    <li>Setting up a testing environment immediately</li>
+                    <li><b>Leaving slide unfinished so front end can also add</b> </li>
+                </ul>
+            </p>
+
+            <aside class="notes">
+            </aside>
+        </section>
+
+        <section>
+            <h2>If we had more time</h2>
+            <p>
+            </p>
+
+            <aside class="notes">
+            </aside>
+        </section>
+
+        <section>
+            <h2>Conclusion</h2>
+            <p>
+                how are we gonna wrap this up gang?
+                Suggestions: Summary of how we feel about the project? ("overall it was a good learning experience")
+            </p>
+
+            <aside class="notes">
+            </aside>
         </section>
       </div>
 
