Added section of ITS and PORTAL background again

--- a/index.html
+++ b/index.html
@@ -61,12 +61,25 @@
         </section>
 
         <section>
-          <h2>A quick reminder...</h2>
+          <h2>Background of ITS and Portal</h2>
           <p>
-            What is this routelandia thing again?
+            <h3 align="left">ITS</h3>
+            <ul>
+              <li>Intelligent Transportation Systems</li>
+              <li>Collects and analyzes transportation information</li>
+            </ul>
+            <h3 align="left">PORTAL</h3>
+            <ul>
+              <li>Portland, Oregon Regional Transportation Archive Listing</li>
+              <li>Archives various traffic information in the Portland metro area</li>
+            </ul>
           </p>
-
+          
           <aside class="notes">
+            ITS is an organization that has a place here at PSU. It stands for "Intelligent Transportation Systems". ITS' role here
+            is to collect and analyze various information about traffic.
+            PORTAL is a sub-group within ITS that has a more specific role. It stands for Portland, Oregon Regional Transportation
+            Archive Listing. Their goal is to collect and archive various traffic data and statistics in the Portland Metro area.
           </aside>
         </section>
 
