--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <ul><li>No daily stand ups</li>
                     <li>Weekly meetings and goal setting</li></ul>
                   <li><b>Run through our schedule changes (<---- Rob)</b></li>
-                  <li>Kristins server management will deploy the PHP backend</li>
+                  <li>Kristins server management guy will deploy the PHP backend</li>
               </ul>
               </p>
 
@@ -280,23 +280,6 @@
               </aside>
           </section>
 
-
-        <section>
-          <h2>A REST Service</h2>
-          <p>
-            <ul>
-                <li>RESTler framework to abstract away the nitty gritty of REST</li>
-                <li>Communicates with frontend via JSON</li>
-                <li>Does the majority of the number crunching</li>
-                <li>Communicates with PORTALs database to generate statistics</li>
-                <li>BDD testing with Behat</li>
-                <li>All written in PHP using Model View Controller</li>
-            </ul>
-          </p>
-
-          <aside class="notes">
-          </aside>
-        </section>
 
       </div>
 
