Added details to Schedules and Processes slide

--- a/index.html
+++ b/index.html
@@ -91,10 +91,6 @@
 			<li>historical data</li>
 			<li>Traffic is vaguely cyclical</li>
 			<li>Lets you know best time to hit highway</li>
-            <li>-------------------------------------------------</li>
-            <li>Have you ever been frustrated that you left work and spent 2 hours waiting in traffic?</li>
-            <li>Perhaps you would have rather stayed at work and got more done and later took a shorter trip?</li>
-            <li>PORTAL provides large amounts of data about the freeways within the Portland Metro Area!</li>
 		  </ul>
           </p>
 
@@ -170,12 +166,31 @@
                   <li>"Full time Student" agile</li>
                     <ul><li>No daily stand ups</li>
                     <li>Weekly meetings and goal setting</li></ul>
-                  <li><b>Run through our schedule changes (<---- Rob)</b></li>
-                  <li>Kristins server management guy will deploy the PHP backend</li>
+                  <li>Schedule changes</li>
+                  <li>Handoff will involve deploying the PHP backend onto the Portal Server</li>
               </ul>
               </p>
 
               <aside class="notes">
+                Each of our schedules varied greatly. John has a full-time
+                work schedule, Nasim is a student at two universities,
+                Jesse has a job and a family. With this situation, we had
+                to adopt a "modified" agile development method. It was not
+                possible to hold daily standups, but we did have weekly
+                meetings where we tracked our progress and set goals for
+                the following week.
+
+                Since our last presentation, we've had a few changes to the
+                schedule we laid out for ourselves. As stated earlier, we
+                were unable to implement highway chaining, but refined our
+                monthly milestones such as successfully drawing lines over
+                the freeways where there was data and writing queries for
+                route statistics.
+
+                Our handoff is pretty simple. Since our software is free,
+                Portal will only need to deploy a build on their servers
+                which the app on the Playstore will reference. No signing
+                over rights or IP is necessary for this project.
               </aside>
           </section>
 
