--- a/index.html
+++ b/index.html
@@ -75,20 +75,20 @@
               Answer these questions:
               What does your product do? Why is it needed? Who will use it?
 
-		    Routelandia is an app that runs natively on android phones
-			which shows travel times on highways. As our data is local
-			to the general Portland area, those are the highways
-			Routelandia will be able to display.
+		    Routelandia is a native android app that
+			shows travel times along highways. To do this, it
+			pulls historical traffic data from highways around
+			the general Portland area.
 			
-			The most exciting part is this app won't just give you travel
-			times for the moment you choose, but also for before and after.
-			It does this by looking at information from the near past at
-			that time to project how it will be.
+			The hook is this app won't just give you a travel
+			time for just one moment, but before and after it as well.
+			It does this by looking at travel times in the near past
+			to predict them in the future.
 			
-			Traffic tends to follow cycles, as anyone who deals with
-			rush-hour each morning can tell you. Routelandia lets you
-			see, in a convenient way, what those cycles look like,
-			letting you know when is the best time to hit the road.
+			Traffic tends to follow cycles, as anyone in
+			rush-hour traffic can tell you. Routelandia lets you
+			conveniently see what those cycles look like,
+			letting anyone know when's the best time to hit the road.
           </aside>
         </section>
 
