--- a/index.html
+++ b/index.html
@@ -199,10 +199,13 @@
               <p>
               <ul>
                   <li>Front end</li>
-                  <ul><li>Nasim, Loc, John</li></ul>
-                  <li>Backend</li>
-                    <ul><li>Josh, Jesse, Peter</li></ul>
-                  <li></li>
+              <ul><li>Nasim is UI/UX in the front end and plot the statistics graph</li></ul>
+              <ul><li>Loc uses data from the backend draw highway in the map and sets up CI</li></ul>
+              <ul><li>John</li></ul>
+              <li>Backend</li>
+              <ul><li>Josh is bearded wizard</li></ul>
+              <ul><li>Peter is tall wizard</li></ul>
+              <ul><li>Jesse is test wizard</li></ul>
               </ul>
               </p>
 
