--- a/index.html
+++ b/index.html
@@ -93,21 +93,24 @@
         </section>
 
         <section>
-          <h2>Background of ITS and Portal</h2>
+          <h2>Turning Data Into Information</h2>
           <p>
-            <h3 align="left">ITS</h3>
+            <h3 align="left">There is data all over Portland</h3>
             <ul>
-              <li>Intelligent Transportation Systems</li>
-              <li>Collects and analyzes transportation information</li>
+              <li>Traffic detectors</li>
+              <li>Public transportation statistics</li>
             </ul>
-            <h3 align="left">PORTAL</h3>
+            <h3 align="left">ITS & PORTAL</h3>
             <ul>
               <li>Portland, Oregon Regional Transportation Archive Listing</li>
               <li>Archives various traffic information in the Portland metro area</li>
+              <li>3 TB of data stored</li>
             </ul>
           </p>
 
           <aside class="notes">
+            
+            
             ITS is an organization that has a place here at PSU. It stands for "Intelligent Transportation Systems". ITS' role here
             is to collect and analyze various information about traffic.
             PORTAL is a sub-group within ITS that has a more specific role. It stands for Portland, Oregon Regional Transportation
