More changes to slide 2

--- a/index.html
+++ b/index.html
@@ -102,8 +102,10 @@
             </ul>
             <h3 align="left">ITS & PORTAL</h3>
             <ul>
+              <li>Intelligent Transportation Systems</li>
+              <li>Various applications and technologies for colecting traffic information</li>
               <li>Portland, Oregon Regional Transportation Archive Listing</li>
-              <li>Archives various traffic information in the Portland metro area</li>
+              <li>Archives the collected data in the Portland metro area</li>
               <li>3 TB of data stored</li>
             </ul>
           </p>
