change the nested bulled list

--- a/index.html
+++ b/index.html
@@ -95,19 +95,23 @@
         <section>
           <h2>Turning Data Into Information</h2>
           <p>
-            <h3 align="left">There is data all over Portland</h3>
             <ul>
+            <ul align="left">There is data all over Portland</ul>
+            <ul>
+                <ul>
               <li>Traffic detectors</li>
               <li>Public transportation statistics</li>
             </ul>
-            <h3 align="left">ITS & PORTAL</h3>
-            <ul>
+            </ul>
+            <ul align="left">ITS & PORTAL</ul>
+                <ul><ul>
               <li>Intelligent Transportation Systems</li>
               <li>Various applications and technologies for colecting traffic information</li>
               <li>Portland, Oregon Regional Transportation Archive Listing</li>
               <li>Archives the collected data in the Portland metro area</li>
               <li>3 TB of data stored</li>
-            </ul>
+                </ul></ul>
+        </ul>
           </p>
 
           <aside class="notes">
