--- a/index.html
+++ b/index.html
@@ -95,23 +95,21 @@
         <section>
           <h2>Turning Data Into Information</h2>
           <p>
-            <ul>
-            <ul align="left">There is data all over Portland</ul>
-            <ul>
-                <ul>
-              <li>Traffic detectors</li>
-              <li>Public transportation statistics</li>
+            <ul class = "fragment">
+              <ul align="left">There is data all over Portland</ul>
+                <li>Traffic detectors</li>
+                <li>Public transportation statistics</li>
             </ul>
+          </p>
+          <p>
+            <ul class = "fragment">
+              <ul align="left">ITS & PORTAL</ul>
+                <li>Intelligent Transportation Systems</li>
+                <li>Various applications and technologies for colecting traffic information</li>
+                <li>Portland, Oregon Regional Transportation Archive Listing</li>
+                <li>Archives the collected data in the Portland metro area</li>
+                <li>3 TB of data stored</li>
             </ul>
-            <ul align="left">ITS & PORTAL</ul>
-                <ul><ul>
-              <li>Intelligent Transportation Systems</li>
-              <li>Various applications and technologies for colecting traffic information</li>
-              <li>Portland, Oregon Regional Transportation Archive Listing</li>
-              <li>Archives the collected data in the Portland metro area</li>
-              <li>3 TB of data stored</li>
-                </ul></ul>
-        </ul>
           </p>
 
           <aside class="notes">
