Add basic architecture diagram

--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
               <li>Kristins server management will deploy the PHP backend</li>
             </ul>
 
+            <img src="img/architecture_diagram.png" />
+
             <aside class="notes">
               OWNER: Loc
             </aside>
